--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "scripts": {
-    "start":"nodemon server.js"
-
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "vercel": "^33.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
